Deleted min height to prevent problem with spacing between song tiles

--- a/src/components/SongsList/SongsList.module.scss
+++ b/src/components/SongsList/SongsList.module.scss
@@ -8,5 +8,4 @@
     flex-wrap: wrap;
     overflow-y: auto;
     gap: 20px;
-    min-height: 400px;
 }
